[feature-add-login-page] Add login/logout flow

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.5",
     "express": "^4.15.3",
     "mysql": "^2.13.0",
     "node-oauth2-server": "^2.4.0"
