--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^4.0.0",
     "chartist": "^0.11.0",
     "es6-promise": "^4.2.4",
+    "firebase": "^6.6.2",
+    "http2": "^3.3.7",
     "querystring": "^0.2.0",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.1.0",
